crates/biome_html_parser/tests/html_specs/ok/svelte/await_destructuring.svelte
{#await promise then { name, age, address }}
  <div>
    <p>Name: {name}</p>
    <p>Age: {age}</p>
    <p>Address: {address}</p>
  </div>
{/await}
