crates/biome_html_parser/tests/html_specs/error/svelte/await_missing_catch_binding.svelte
{#await promise}
  <p>Loading...</p>
{:then value}
  <p>{value}</p>
{:catch}
  <p>Error occurred</p>
{/await}
